fix tests with adminpanel